--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,28 +24,36 @@
             android:exported="false" />
         <activity
             android:name=".SettingActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation = "portrait" />
         <activity
             android:name=".BackToolbarActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation = "portrait" />
         <activity
             android:name=".MainToolbarActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation = "portrait"  />
         <activity
             android:name=".PanduanActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation = "portrait" />
         <activity
             android:name=".KoleksiActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation = "portrait" />
         <activity
             android:name=".RiwayatActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation = "portrait" />
         <activity
             android:name=".PenjelajahActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation = "portrait" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation = "portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,7 +62,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation = "portrait"  />
     </application>
 
 </manifest>
