--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,42 +17,76 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Literaku"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <receiver
+            android:name=".LiterakuWidget"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/literaku_widget_info" />
+        </receiver>
+
+        <activity
+            android:name=".LiterakuWidgetConfigureActivity"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
+            </intent-filter>
+        </activity>
+
+        <receiver
+            android:name=".LiterakuWidget"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/literaku_widget_info" />
+        </receiver>
+
         <activity
             android:name=".BukuActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SettingActivity"
             android:exported="false"
-            android:screenOrientation = "portrait" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".BackToolbarActivity"
             android:exported="false"
-            android:screenOrientation = "portrait" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainToolbarActivity"
             android:exported="false"
-            android:screenOrientation = "portrait"  />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PanduanActivity"
             android:exported="false"
-            android:screenOrientation = "portrait" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".KoleksiActivity"
             android:exported="false"
-            android:screenOrientation = "portrait" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".RiwayatActivity"
             android:exported="false"
-            android:screenOrientation = "portrait" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PenjelajahActivity"
             android:exported="false"
-            android:screenOrientation = "portrait" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SplashScreen"
             android:exported="true"
-            android:screenOrientation = "portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -63,7 +96,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:screenOrientation = "portrait"  />
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
